[gd_scene load_steps=6 format=3 uid="uid://cj8k13e2rrhqy"]

[ext_resource type="Script" path="res://elements/apple/apple.gd" id="1_gxne7"]
[ext_resource type="Texture2D" uid="uid://yr3d2gdfsoy4" path="res://assets/apple1.png" id="1_pgfic"]
[ext_resource type="Texture2D" uid="uid://c58bpd5jbr21l" path="res://assets/apple2.png" id="3_rr4br"]
[ext_resource type="Texture2D" uid="uid://cvqn2oc2i16g5" path="res://assets/apple3.png" id="4_rrbyl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_prhtw"]
radius = 37.0

[node name="Apple" type="Node2D"]
script = ExtResource("1_gxne7")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 3.14159
texture = ExtResource("1_pgfic")
offset = Vector2(2.08165e-12, 4)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, -16)
shape = SubResource("CircleShape2D_prhtw")

[node name="AppleParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, -16)
emitting = false
amount = 1
lifetime = 2.0
one_shot = true
texture = ExtResource("3_rr4br")
direction = Vector2(2.08165e-12, -1)
gravity = Vector2(2.08165e-12, 500)
initial_velocity_min = 150.0
initial_velocity_max = 200.0
angular_velocity_min = 150.0
angular_velocity_max = 200.0

[node name="AppleParticles2D2" type="CPUParticles2D" parent="."]
position = Vector2(0, -32)
emitting = false
amount = 1
lifetime = 2.0
one_shot = true
texture = ExtResource("4_rrbyl")
direction = Vector2(2.08165e-12, -1)
gravity = Vector2(2.08165e-12, 500)
initial_velocity_min = 150.0
initial_velocity_max = 200.0
angular_velocity_min = 150.0
angular_velocity_max = 200.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
